src/app/shared/components/header/header.component.scss
@import "./../../styles/variables";

.header{
    display: flex;
    width: 100vw;
    height: 63px;
    background-color:$dark-primary-color;
    justify-content: space-between;
    align-items: center;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);

    &__logo{
        width: 80px;
        height: 80px;
        margin-inline-start: 40px;
    }

    &__hamburguer{
        margin-inline-end: 19px;
        width: 25px;
        height: 25px;
    }

    &__nav{
        display: none;
    }
}

@media screen and (min-width: 859px) {
    .header{
        &__hamburguer{
            display: none;
        }

        &__nav{
            display: block;
            width: 800px;
            margin-inline-end: 40px;
           
            &-ul{
                display: flex;
                align-items: center;
                justify-content: space-around;
                
                

                &-li{
                    list-style: none;
                    
                    & img{
                        width: 30px;
                        height: 30px;
                    }

                    & a{
                        
                        text-decoration: none;
                        color: $text-icons;
                        font-size: 18px; 
                    }

                    & a.active{
                        background-image: none;
                        background-image: linear-gradient($light-primary-color, $light-primary-color);
                        background-position: 0% 100%;
                        background-repeat: no-repeat;
                        background-size: 100% 2px;
                    }
                }
            }
        }
    }

    .linear-animation{
        text-decoration: none;
            color: $light-primary-color;
            background-image: linear-gradient($light-primary-color, $light-primary-color);
            background-position: 0% 100%;
            background-repeat: no-repeat;
            background-size: 0% 2px;
            transition: background-size .3s;

            &:hover, a:focus{
                background-size: 100% 2px;
            }
    }
}

